--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "4.7.1",
+    "clsx": "1.0.4",
     "framer-motion": "1.6.17",
     "react": "16.12.0",
+    "react-countup": "4.2.3",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
   },
